Fixed navigation bar overlapping issue
Fixed issue where if the applications window was too small the navigation bar would overlap with the page obscuring content. Now it will shift the webpage accordingly. :b:

--- a/clientside/src/scss/frontend/components/navigation/expanded-navigation.scss
+++ b/clientside/src/scss/frontend/components/navigation/expanded-navigation.scss
@@ -46,7 +46,7 @@ Expanded navigation is the vertical navigation that expands displaying titles ne
 
 		//mobile responsive
 		@include media(xs, sm, md) {
-			position: absolute;
+			position: relative;
 		}
 
 		>ul {
